# smart-video-segmentation

./: .gitignore  CLAUDE.md  README.md  README_zh.md  main.py  models.py  pyproject.toml  requirements.txt  smart_segmenter.py  speaker_change_detector.py  speech_recognizer.py  utils.py  video_splitter.py
src/smart_segmenter/: __init__.py  cli.py  pipeline.py  shot_detector.py  smart_segmenter.py  speaker_change_detector.py  speaker_diarizer.py  speech_recognizer.py  video_splitter.py
src/smart_segmenter/gui/: __init__.py  analysis_panel.py  config_panel.py  main_window.py  segment_list.py  speech_panel.py  styles.py  timeline_widget.py  video_player.py  worker.py
