[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-video-segmentation"
version = "0.1.0"
description = "智能视频分割工具 - 结合镜头检测和语音识别"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "mawenhao" }
]
keywords = ["video", "segmentation", "shot-detection", "speaker-diarization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]   
dependencies = [
    # CLI
    "typer>=0.9.0",
    # 镜头检测
    "transnetv2-pytorch",
    "opencv-python>=4.8.0",
    # 语音识别
    "openai-whisper>=20231117",
    # 说话人检测
    "resemblyzer>=0.1.4",
    "librosa>=0.10.0",
    "scikit-learn>=1.3.0",
    # 基础依赖
    "numpy>=1.24.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
gui = [
    "PySide6>=6.5.0",
]

[project.scripts]
sseg = "smart_segmenter.cli:app"
sseg-gui = "smart_segmenter.gui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/smart_segmenter"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]